# Go-SFML

./: .gitignore  CMakeLists.txt  README.md
include/: BoardLogic.h  BoardRender.h  Common.h  Stone.h
include/Controllers/: GameController.h
include/Graphic/: BoardPainter.h  GameGeometry.h
include/Logic/: BensonSolver.h  Board.h  GameLogic.h
src/: BoardLogic.cc  BoardRender.cc  main.cc
src/Controllers/: GameController.cc
src/Graphic/: BoardPainter.cc  BoardPainter.cpp  GameGeometry.cc  GameGeometry.cpp
src/Logic/: BensonSolver.cc  Board.cc  Board.cpp  GameLogic.cc  GameLogic.cpp
